--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="action_preferred_location">Preferred Location</string>
+    <string name="action_share">share</string>
+    <string name="action_map">Preferred Location</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_detailed">Details</string>
     <string name="title_activity_settings">Settings</string>
